<resources>
    <string name="admsoloraya_res_0x7f120000">Navigate home</string>
    <string name="admsoloraya_res_0x7f120001">Navigate up</string>
    <string name="admsoloraya_res_0x7f120002">More options</string>
    <string name="admsoloraya_res_0x7f120003">Done</string>
    <string name="admsoloraya_res_0x7f120004">See all</string>
    <string name="admsoloraya_res_0x7f120005">Choose an app</string>
    <string name="admsoloraya_res_0x7f120006">OFF</string>
    <string name="admsoloraya_res_0x7f120007">ON</string>
    <string name="admsoloraya_res_0x7f120008">Alt+</string>
    <string name="admsoloraya_res_0x7f120009">Ctrl+</string>
    <string name="admsoloraya_res_0x7f12000a">delete</string>
    <string name="admsoloraya_res_0x7f12000b">enter</string>
    <string name="admsoloraya_res_0x7f12000c">Function+</string>
    <string name="admsoloraya_res_0x7f12000d">Meta+</string>
    <string name="admsoloraya_res_0x7f12000e">Shift+</string>
    <string name="admsoloraya_res_0x7f12000f">space</string>
    <string name="admsoloraya_res_0x7f120010">Sym+</string>
    <string name="admsoloraya_res_0x7f120011">Menu+</string>
    <string name="admsoloraya_res_0x7f120012">Search…</string>
    <string name="admsoloraya_res_0x7f120013">Clear query</string>
    <string name="admsoloraya_res_0x7f120014">Search query</string>
    <string name="admsoloraya_res_0x7f120015">Search</string>
    <string name="admsoloraya_res_0x7f120016">Submit query</string>
    <string name="admsoloraya_res_0x7f120017">Voice search</string>
    <string name="admsoloraya_res_0x7f120018">Share with</string>
    <string name="admsoloraya_res_0x7f120019">Share with %s</string>
    <string name="admsoloraya_res_0x7f12001a">Collapse</string>
    <string name="admsoloraya_res_0x7f12001b">androidx.startup</string>
    <string name="admsoloraya_res_0x7f12001c">XKatrina</string>
    <string name="admsoloraya_res_0x7f12001d">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="admsoloraya_res_0x7f12001e">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="admsoloraya_res_0x7f12001f">Collapse the bottom sheet</string>
    <string name="admsoloraya_res_0x7f120020">Expand the bottom sheet</string>
    <string name="admsoloraya_res_0x7f120021">Expand halfway</string>
    <string name="admsoloraya_res_0x7f120022">Drag handle double-tapped</string>
    <string name="admsoloraya_res_0x7f120023">Drag handle</string>
    <string name="admsoloraya_res_0x7f120024">Force-Stop It!</string>
    <string name="admsoloraya_res_0x7f120025">Go Setting</string>
    <string name="admsoloraya_res_0x7f120026">Refresh List</string>
    <string name="admsoloraya_res_0x7f120027">Show Running Applications</string>
    <string name="admsoloraya_res_0x7f120028">Show Running Apps</string>
    <string name="admsoloraya_res_0x7f120029">Stop All Apps</string>
    <string name="admsoloraya_res_0x7f12002a">Characters entered %1$d of %2$d</string>
    <string name="admsoloraya_res_0x7f12002b">Character limit exceeded %1$d of %2$d</string>
    <string name="admsoloraya_res_0x7f12002c">%1$d/%2$d</string>
    <string name="admsoloraya_res_0x7f12002d">Clear text</string>
    <string name="admsoloraya_res_0x7f12002e">Enable</string>
    <string name="admsoloraya_res_0x7f12002f">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="admsoloraya_res_0x7f120030">Enable Google Play services</string>
    <string name="admsoloraya_res_0x7f120031">Install</string>
    <string name="admsoloraya_res_0x7f120032">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="admsoloraya_res_0x7f120033">Get Google Play services</string>
    <string name="admsoloraya_res_0x7f120034">Google Play services availability</string>
    <string name="admsoloraya_res_0x7f120035">Google Play services error</string>
    <string name="admsoloraya_res_0x7f120036">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="admsoloraya_res_0x7f120037">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="admsoloraya_res_0x7f120038">Update</string>
    <string name="admsoloraya_res_0x7f120039">%1$s won\'t run unless you update Google Play services.</string>
    <string name="admsoloraya_res_0x7f12003a">Update Google Play services</string>
    <string name="admsoloraya_res_0x7f12003b">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="admsoloraya_res_0x7f12003c">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="admsoloraya_res_0x7f12003d">Open on phone</string>
    <string name="admsoloraya_res_0x7f12003e">Sign in</string>
    <string name="admsoloraya_res_0x7f12003f">Sign in with Google</string>
    <string name="admsoloraya_res_0x7f120040">Error: invalid</string>
    <string name="admsoloraya_res_0x7f120041">Error</string>
    <string name="admsoloraya_res_0x7f120042">No text found or the app blocked Copy from accessing the screen.</string>
    <string name="admsoloraya_res_0x7f120043">This app blocked Copy from accessing the text and screenshot.</string>
    <string name="admsoloraya_res_0x7f120044">Sharing the screenshot failed.</string>
    <string name="admsoloraya_res_0x7f120045">Text access is disabled in the assist settings.</string>
    <string name="admsoloraya_res_0x7f120046">Copy is unable to access this part of the screen.</string>
    <string name="admsoloraya_res_0x7f120047">Show dropdown menu</string>
    <string name="admsoloraya_res_0x7f120048">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="admsoloraya_res_0x7f120049">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="admsoloraya_res_0x7f12004a">Miscellaneous</string>
    <string name="firebase_database_url">https://xkatrina-fufufu-default-rtdb.firebaseio.com</string>
    <string name="google_api_key">AIzaSyAjz8fUM_Acg9coUxpThCuXpxNgMla4nCY</string>
    <string name="google_app_id">1:578245639073:android:a6dee779b326eae6cba9e0</string>
    <string name="google_storage_bucket">xkatrina-fufufu.appspot.com</string>
    <string name="admsoloraya_res_0x7f12004f">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="admsoloraya_res_0x7f120050">Dialog Icon</string>
    <string name="admsoloraya_res_0x7f120051">Tab</string>
    <string name="admsoloraya_res_0x7f120052">sans-serif-medium</string>
    <string name="admsoloraya_res_0x7f120053">sans-serif</string>
    <string name="admsoloraya_res_0x7f120054">sans-serif-medium</string>
    <string name="admsoloraya_res_0x7f120055">sans-serif</string>
    <string name="admsoloraya_res_0x7f120056">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="admsoloraya_res_0x7f120057">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
    <string name="admsoloraya_res_0x7f120058">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
    <string name="admsoloraya_res_0x7f120059">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="admsoloraya_res_0x7f12005a">cubic-bezier(0.4, 0, 0.2, 1)</string>
    <string name="admsoloraya_res_0x7f12005b">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="admsoloraya_res_0x7f12005c">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="admsoloraya_res_0x7f12005d">cubic-bezier(0, 0, 1, 1)</string>
    <string name="admsoloraya_res_0x7f12005e">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="admsoloraya_res_0x7f12005f">cubic-bezier(0.3, 0, 1, 1)</string>
    <string name="admsoloraya_res_0x7f120060">cubic-bezier(0, 0, 0, 1)</string>
    <string name="admsoloraya_res_0x7f120061">:</string>
    <string name="admsoloraya_res_0x7f120062">Select AM or PM</string>
    <string name="admsoloraya_res_0x7f120063">%1$s hours</string>
    <string name="admsoloraya_res_0x7f120064">Select hour</string>
    <string name="admsoloraya_res_0x7f120065">%1$s o\'clock</string>
    <string name="admsoloraya_res_0x7f120066">Select minutes</string>
    <string name="admsoloraya_res_0x7f120067">%1$s minutes</string>
    <string name="admsoloraya_res_0x7f120068">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="admsoloraya_res_0x7f120069">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="admsoloraya_res_0x7f12006a">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="admsoloraya_res_0x7f12006b">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="admsoloraya_res_0x7f12006c">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="admsoloraya_res_0x7f12006d">Range end</string>
    <string name="admsoloraya_res_0x7f12006e">Range start</string>
    <string name="admsoloraya_res_0x7f12006f">Value</string>
    <string name="admsoloraya_res_0x7f120070">AM</string>
    <string name="admsoloraya_res_0x7f120071">Switch to clock mode for the time input.</string>
    <string name="admsoloraya_res_0x7f120072">Hour</string>
    <string name="admsoloraya_res_0x7f120073">Minute</string>
    <string name="admsoloraya_res_0x7f120074">PM</string>
    <string name="admsoloraya_res_0x7f120075">Select time</string>
    <string name="admsoloraya_res_0x7f120076">Switch to text input mode for the time input.</string>
    <string name="admsoloraya_res_0x7f120077">New notification</string>
    <string name="admsoloraya_res_0x7f120078">M14,18.2 11.4,15.6 10,17 14,21 22,13 20.6,11.6z</string>
    <string name="admsoloraya_res_0x7f120079">icon</string>
    <string name="admsoloraya_res_0x7f12007a">M13.4,15 11,15 11,17 13.4,17 21,17 21,15z</string>
    <string name="admsoloraya_res_0x7f12007b">icon path</string>
    <string name="admsoloraya_res_0x7f12007c">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z</string>
    <string name="admsoloraya_res_0x7f12007d">button</string>
    <string name="admsoloraya_res_0x7f12007e">button path</string>
    <string name="admsoloraya_res_0x7f12007f">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z M23,23H9V9h14V23z</string>
    <string name="admsoloraya_res_0x7f120080">Checked</string>
    <string name="admsoloraya_res_0x7f120081">Partially checked</string>
    <string name="admsoloraya_res_0x7f120082">Not checked</string>
    <string name="admsoloraya_res_0x7f120083">Remove %1$s</string>
    <string name="admsoloraya_res_0x7f120084">More than %1$d new notifications</string>
    <string name="admsoloraya_res_0x7f120085">%1$d%2$s</string>
    <string name="admsoloraya_res_0x7f120086">Change to next month</string>
    <string name="admsoloraya_res_0x7f120087">Change to previous month</string>
    <string name="admsoloraya_res_0x7f120088">Start date selection: %1$s – End date selection: %2$s</string>
    <string name="admsoloraya_res_0x7f120089">Current selection: %1$s</string>
    <string name="admsoloraya_res_0x7f12008a">none</string>
    <string name="admsoloraya_res_0x7f12008b">Cancel</string>
    <string name="admsoloraya_res_0x7f12008c">OK</string>
    <string name="admsoloraya_res_0x7f12008d">%1$s</string>
    <string name="admsoloraya_res_0x7f12008e">Select Date</string>
    <string name="admsoloraya_res_0x7f12008f">Selected date</string>
    <string name="admsoloraya_res_0x7f120090">Column of days: %1$s</string>
    <string name="admsoloraya_res_0x7f120091">End date %1$s</string>
    <string name="admsoloraya_res_0x7f1200b3">Cancel</string>
    <string name="admsoloraya_res_0x7f1200b4">OK</string>
    <string name="admsoloraya_res_0x7f1200de">No files in\n$HOME/.shortcuts/</string>
    <string name="admsoloraya_res_0x7f1200e3">Refresh</string>
    <string name="admsoloraya_res_0x7f1200fa">XTermod</string>
</resources>