<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.button.MaterialButtonToggleGroup xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:id="@+id/material_clock_period_toggle" android:visibility="gone" android:layout_width="@dimen/admsoloraya_res_0x7f07050c" android:layout_height="@dimen/admsoloraya_res_0x7f070509" android:contentDescription="@string/admsoloraya_res_0x7f120062" app:checkedButton="@+id/admsoloraya_res_0x7f0a0345" app:selectionRequired="true" app:singleSelection="true">
    <com.google.android.material.button.MaterialButton android:id="@+id/admsoloraya_res_0x7f0a0345" android:layout_width="wrap_content" android:text="@string/admsoloraya_res_0x7f120070" android:insetTop="8dp" style="?attr/admsoloraya_res_0x7f040302"/>
    <com.google.android.material.button.MaterialButton android:id="@+id/admsoloraya_res_0x7f0a0346" android:layout_width="wrap_content" android:text="@string/admsoloraya_res_0x7f120074" android:insetBottom="8dp" style="?attr/admsoloraya_res_0x7f040302"/>
</com.google.android.material.button.MaterialButtonToggleGroup>
