<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:padding="0dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:padding="0dp" android:paddingTop="6dp" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="horizontal" android:id="@+id/admsoloraya_res_0x7f0a04b3" android:background="#ff000000" android:padding="6dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18sp" android:textColor="@android:color/primary_text_dark" android:layout_gravity="center_vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/admsoloraya_res_0x7f1200fa" android:layout_weight="2"/>
        </LinearLayout>
        <ListView android:id="@+id/admsoloraya_res_0x7f0a05cc" android:background="@android:color/background_light" android:layout_width="match_parent" android:layout_height="match_parent" android:divider="@android:color/darker_gray" android:dividerHeight="1px" android:layout_below="@+id/admsoloraya_res_0x7f0a04b3"/>
        <TextView android:textColor="@android:color/black" android:id="@+id/admsoloraya_res_0x7f0a0178" android:background="@android:color/white" android:padding="6dp" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/admsoloraya_res_0x7f1200de" android:layout_below="@+id/admsoloraya_res_0x7f0a04b3"/>
    </RelativeLayout>
    <ImageButton android:id="@+id/admsoloraya_res_0x7f0a0400" android:layout_width="34dp" android:layout_height="34dp" android:src="@drawable/admsoloraya_res_0x7f08013a" android:layout_alignParentTop="true" android:contentDescription="@string/admsoloraya_res_0x7f1200e3" android:layout_alignParentEnd="true" style="?android:attr/borderlessButtonStyle"/>
</RelativeLayout>
