<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal" android:id="@+id/admsoloraya_res_0x7f0a0420" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="?android:attr/textColorPrimary" android:gravity="center_vertical" android:id="@+id/admsoloraya_res_0x7f0a041f" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginBottom="2dp" android:drawablePadding="0dp"/>
    <ImageView android:layout_gravity="center_vertical" android:id="@+id/admsoloraya_res_0x7f0a0422" android:focusable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/admsoloraya_res_0x7f120015" style="?attr/admsoloraya_res_0x7f04000d"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/admsoloraya_res_0x7f0a0424" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:layout_weight="1" android:layoutDirection="locale">
        <ImageView android:layout_gravity="center_vertical" android:id="@+id/admsoloraya_res_0x7f0a0426" android:visibility="gone" android:layout_width="@dimen/admsoloraya_res_0x7f070029" android:layout_height="wrap_content" android:scaleType="centerInside" style="@style/admsoloraya_res_0x7f130153"/>
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@+id/admsoloraya_res_0x7f0a0427" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_weight="1">
            <view android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@+id/admsoloraya_res_0x7f0a0428" android:background="@null" android:paddingLeft="@dimen/admsoloraya_res_0x7f07002a" android:paddingRight="@dimen/admsoloraya_res_0x7f07002b" android:layout_width="0dp" android:layout_height="36dp" android:singleLine="true" android:layout_weight="1" android:inputType="textNoSuggestions" android:dropDownAnchor="@+id/admsoloraya_res_0x7f0a0424" android:imeOptions="actionSearch" android:dropDownHeight="wrap_content" android:dropDownHorizontalOffset="0dp" android:dropDownVerticalOffset="0dp" class="androidx.appcompat.widget.SearchView$SearchAutoComplete"/>
            <ImageView android:layout_gravity="center_vertical" android:id="@+id/admsoloraya_res_0x7f0a0423" android:background="?attr/admsoloraya_res_0x7f0403d4" android:paddingLeft="8dp" android:paddingRight="8dp" android:focusable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/admsoloraya_res_0x7f120013"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/admsoloraya_res_0x7f0a046b" android:layout_width="wrap_content" android:layout_height="match_parent">
            <ImageView android:layout_gravity="center_vertical" android:id="@+id/admsoloraya_res_0x7f0a0425" android:background="?attr/admsoloraya_res_0x7f0403d4" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/admsoloraya_res_0x7f120016"/>
            <ImageView android:layout_gravity="center_vertical" android:id="@+id/admsoloraya_res_0x7f0a0436" android:background="?attr/admsoloraya_res_0x7f0403d4" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/admsoloraya_res_0x7f120017"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
