<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:paddingBottom="2dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:accessibilityPaneTitle="@string/admsoloraya_res_0x7f120075">
    <TextView android:id="@+id/admsoloraya_res_0x7f0a01cf" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/admsoloraya_res_0x7f120075" android:importantForAccessibility="no" android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="?attr/admsoloraya_res_0x7f040328"/>
    <androidx.constraintlayout.widget.Barrier android:id="@+id/admsoloraya_res_0x7f0a006b" android:layout_width="wrap_content" android:layout_height="wrap_content" app:barrierDirection="3" app:barrierMargin="@dimen/admsoloraya_res_0x7f070524" app:constraint_referenced_ids="material_textinput_timepicker, material_timepicker_view"/>
    <com.google.android.material.timepicker.TimePickerView android:id="@+id/admsoloraya_res_0x7f0a0352" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginTop="@dimen/admsoloraya_res_0x7f070504" android:layout_marginRight="24dp" android:layout_marginBottom="24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <ViewStub android:id="@+id/material_textinput_timepicker" android:layout="@layout/admsoloraya_res_0x7f0d0071" android:inflatedId="@+id/material_textinput_timepicker" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginTop="44dp" android:layout_marginRight="24dp" android:layout_marginBottom="24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.google.android.material.button.MaterialButton android:id="@+id/admsoloraya_res_0x7f0a0350" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="12dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/admsoloraya_res_0x7f0a006b" style="?attr/admsoloraya_res_0x7f040246"/>
    <Button android:id="@+id/admsoloraya_res_0x7f0a034e" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:minWidth="72dp" android:text="@string/admsoloraya_res_0x7f1200b3" android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/admsoloraya_res_0x7f0a0351" app:layout_constraintTop_toTopOf="@+id/admsoloraya_res_0x7f0a0350" style="?attr/admsoloraya_res_0x7f040079"/>
    <Button android:id="@+id/admsoloraya_res_0x7f0a0351" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:minWidth="64dp" android:text="@string/admsoloraya_res_0x7f1200b4" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/admsoloraya_res_0x7f0a0350" style="?attr/admsoloraya_res_0x7f040079"/>
</androidx.constraintlayout.widget.ConstraintLayout>
